# obstflib

./: .gitignore  README.md  pyproject.toml
scripts/: add_events_to_stf_folder.py  check_signal_processing.py  compare_gcmt_cmt3d+_synthetics.py  compare_gcmt_scardec_synthetics.py  convolutions.py  cost_grad_analysis.py  create_stf_subset.py  data_plot.py  directivity_analysis.py  full_inversion.py  get_cmts.py  invert_cmt3d+.py  invert_scardec_style.py  invert_scardec_style_2.py  invert_scardec_style_surface_wave.py  job.bash  multiple_stations.py  multiple_stations_test.py  obsnumpy_signal_processing.py  peru_relocation_map.py  plot_scardec_stf.py  stfinv.py  summary.py  summary_histogram.py
scripts/STF/: README.md
scripts/STF/FCTs_19930115_110605_HOKKAIDO__JAPAN_REGION/: CMTSOLUTION  fctmoysource_19930115_110605_HOKKAIDO__JAPAN_REGION  fctoptsource_19930115_110605_HOKKAIDO__JAPAN_REGION
scripts/STF/FCTs_19930608_130336_NEAR_EAST_COAST_OF_KAMCHATKA/: CMTSOLUTION  fctmoysource_19930608_130336_NEAR_EAST_COAST_OF_KAMCHATKA  fctoptsource_19930608_130336_NEAR_EAST_COAST_OF_KAMCHATKA
scripts/STF/FCTs_19930712_131711_HOKKAIDO__JAPAN_REGION/: CMTSOLUTION  fctmoysource_19930712_131711_HOKKAIDO__JAPAN_REGION  fctoptsource_19930712_131711_HOKKAIDO__JAPAN_REGION
scripts/STF/FCTs_19930808_083424_SOUTH_OF_MARIANA_ISLANDS/: CMTSOLUTION  fctmoysource_19930808_083424_SOUTH_OF_MARIANA_ISLANDS  fctoptsource_19930808_083424_SOUTH_OF_MARIANA_ISLANDS
scripts/STF/FCTs_19940309_232806_FIJI_ISLANDS_REGION/: CMTSOLUTION  fctmoysource_19940309_232806_FIJI_ISLANDS_REGION  fctoptsource_19940309_232806_FIJI_ISLANDS_REGION
scripts/STF/FCTs_19940609_003316_NORTHERN_BOLIVIA/: CMTSOLUTION  (+2 more)
src/obstflib/: __init__.py  convenience.py  directivity.py  ellipse.py  inversion.py  plot.py  process.py  utils.py
(+343 files in other folders)
